--- a/web-root/css/style.css
+++ b/web-root/css/style.css
@@ -1,3 +1,19 @@
+.logo
+{
+
+    left: 0;
+    height: 90px;
+}
+
+header h1
+{
+    padding: 30px;
+    color: #d02b4d;
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3.2em;
+}
+
 header
 {
     background-color: white;
@@ -7,70 +23,28 @@ header
     justify-content: center;
 }
 
-.logo
+
+
+.indexTema2
 {
-   
-    left: 0;
-    height: 90px;
-    /*min-width: 90px;*/
+    padding: 0px 100px;
 }
-
-h1
-{
-    padding: 30px;
-    color: #d02b4d;
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 45px;
-}
-
-
 
 .indexTema2 h2
 {
     margin-top: 50px;
-}
-
-.variables
-{
-    display: flex;
-    padding: 50px;
-    flex-direction: column;
-    
-}
-
-.variables h2
-{
-    margin-top: 50px;
-}
-
-
-main
-{
-    display: flex;
-    padding: 50px;
-    text-align: center;
-    justify-content: flex-start;
-}
-
-
-
-.boton
-{
-    margin-right: 30px;
     padding: 30px;
-    background-color: #d02b4d;
-    border-radius: 15px;
-    width: 150px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #d02b4d;
     text-align: center;
-    font-size: 28px;
-    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2.2em;
+}
+
+.indexTema2 p
+{
+    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.2em;
 }
 
 footer
@@ -87,4 +61,36 @@ footer p
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 16px;
+}
+
+footer a
+{
+    right: 0;
+}
+
+main
+{
+    display: flex;
+    padding: 50px;
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+.boton
+{
+    margin-right: 30px;
+    margin-bottom: 30px;
+    padding: 30px;
+    background-color: #d02b4d;
+    border-radius: 15px;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    font-size: 28px;
+    text-decoration: none;
 }
